--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "url": "git+https://github.com/Andre-SMedina/Site-Josy.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "André Luís Silva Medina",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Andre-SMedina/Site-Josy/issues"
   },
   "homepage": "https://github.com/Andre-SMedina/Site-Josy#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "mongoose": "^6.4.1"
   }
 }
