--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Site para registrar conteúdos sobre livros e leituras",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "mongoose": "^6.4.1"
+    "mongoose": "^6.4.1",
+    "nodemon": "^2.0.18"
   }
 }
