--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mongoose": "^6.4.1",
